fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -3066,6 +3066,6 @@ ul { list-style: none; }
     }
 }
 
-body html {
+html body {
     overflow-x: hidden;
 }
